# sdc

./: .gitignore  README.md  pyproject.toml
business_climate/.github/workflows/: runner.yml
business_climate/Microdata/private_code/: update_repository.R
business_climate/docs/: county.json
business_climate/docs/data/: county.csv.xz  coverage.csv  datapackage.json  measure_info.json  tract.csv.xz
demographics/: .valid_csv_links  pipeline.yaml
demographics/.github/workflows/: runner.yml
demographics/Age/: pipeline.yaml
demographics/Age/code/: ingest.py
demographics/Cooperative extension/: pipeline.yaml
demographics/Cooperative extension/code/: prepare.py
demographics/Gender/: pipeline.yaml
demographics/Gender/code/: ingest.py
demographics/Language/: pipeline.yaml
demographics/Language/code/: ingest.py
demographics/Population Density/: pipeline.yaml
demographics/Race/: pipeline.yaml
demographics/Veteran/: pipeline.yaml
demographics/cooperative_extension/: pipeline.yaml
demographics/geographic_mobility/: pipeline.yaml
demographics/population_density/: pipeline.yaml
demographics/segregation/: pipeline.yaml
financial_well_being/: .valid_csv_links
food/: .valid_csv_links
geographies/utils/: write_to_postgres.R
health/Health Care Services/: coords_grid.R  nrc_gmap_coords.csv  nrc_gmap_coords_15k_m.csv
health/fca/: data_combined.Rmd  evaluation_hospitals.Rmd
housing/: .valid_csv_links
meta/census10to20/: README.md
meta/life_expectancy_calculator/: package-lock.json  package.json
public_safety/: .valid_csv_links
(+380 files in other folders)
